--- a/index.html
+++ b/index.html
@@ -58,54 +58,37 @@
         </ul>
       </section>
       <section id="work" class="section">
-        <div class="section-title">Projects</div>
-        <div class="selected-work">
-          <!-- Example static markup, you can duplicate .work-item for more projects or generate from data -->
-          <div class="work-item">
-            <a href="project1.html">
-              <img class="work-thumb" src="content/images/placeholder.png" alt="Project One thumbnail">
-            </a>
-            <div class="work-details">
-              <div class="work-title">Project name</div>
-              <div class="work-subtitle">Description</div>
-            </div>
-          </div>
-          <div class="work-item">
-            <a href="project2.html">
-              <img class="work-thumb" src="content/images/placeholder.png" alt="Project Two thumbnail">
-            </a>
-            <div class="work-details">
-              <div class="work-title">Project name</div>
-              <div class="work-subtitle">Description</div>
-            </div>
-          </div>
-          <div class="work-item">
-            <a href="project3.html">
-              <img class="work-thumb" src="content/images/placeholder.png" alt="Project Three thumbnail">
-            </a>
-            <div class="work-details">
-              <div class="work-title">Project name</div>
-              <div class="work-subtitle">Description</div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="contact" class="section">
-        <div class="section-title">Contact</div>
-        <div class="contact-block">
-          <b>Email:</b> your@email.com<br>
-          <b>Location:</b> Berlin, Germany<br>
-          <b>Open to:</b> Remote & onsite opportunities
-        </div>
-      </section>
-      <section id="more-about" class="section">
-        <div class="section-title">More About Me</div>
-        <ul class="personal-list">
-          <li><b>Languages:</b> English, German, Hebrew</li>
-          <li><b>Hobbies:</b> Climbing, street photography, indie games, creative coding</li>
-          <li><b>Fun:</b> Built a coffee robot just for fun</li>
-        </ul>
-      </section>
+  <div class="section-title">Projects</div>
+  <div class="selected-work">
+    <div class="work-item">
+      <a href="project1.html">
+        <img class="work-thumb" src="content/images/placeholder.png" alt="Project 1 thumbnail">
+      </a>
+      <div class="work-details">
+        <div class="work-title">Project name</div>
+        <p class="work-desc">Description</p>
+      </div>
+    </div>
+    <div class="work-item">
+      <a href="project2.html">
+        <img class="work-thumb" src="content/images/placeholder.png" alt="Project 2 thumbnail">
+      </a>
+      <div class="work-details">
+        <div class="work-title">Project name</div>
+        <p class="work-desc">Description</p>
+      </div>
+    </div>
+    <div class="work-item">
+      <a href="project3.html">
+        <img class="work-thumb" src="content/images/placeholder.png" alt="Project 3 thumbnail">
+      </a>
+      <div class="work-details">
+        <div class="work-title">Project name</div>
+        <p class="work-desc">Description</p>
+      </div>
+    </div>
+  </div>
+</section>
     </main>
   </div>
   <div class="mobile-fun" style="display:none;">
