--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
     </div>
   </div>
 </section>
+<section id="about" class="section">
+        <div class="section-title">Footer</div>
+        <p>
+© 2025 Roie Shalom.
+Website under development — stay tuned for updates.  
+Contact: roiesh🐌gmail.com | Berlin, Germany        </p>
+      </section>
     </main>
   </div>
   <div class="mobile-fun" style="display:none;">
