--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
     </div>
   </div>
 </section>
+    </main>
 <section id="about" class="section">
         <div class="section-title">Footer</div>
         <p>
-© 2025 Roie Shalom.
-Website under development — stay tuned for updates.  
+© 2025 Roie <Shalom class="">
+<br>
+Website under development — stay tuned for updates <br>
 Contact: roiesh🐌gmail.com | Berlin, Germany        </p>
       </section>
-    </main>
   </div>
   <div class="mobile-fun" style="display:none;">
     <!-- Fun section will remain hidden on mobile/tablet -->
