footer in scroll

--- a/index.html
+++ b/index.html
@@ -58,42 +58,50 @@
         </ul>
       </section>
       <section id="work" class="section">
-  <div class="section-title">Projects</div>
-  <div class="selected-work">
-    <div class="work-item">
-      <a href="project1.html">
-        <img class="work-thumb" src="content/images/placeholder.png" alt="Project 1 thumbnail">
-      </a>
-      <div class="work-details">
-        <div class="work-title">Project name</div>
-        <p class="work-desc">Description</p>
-      </div>
-    </div>
-    <div class="work-item">
-      <a href="project2.html">
-        <img class="work-thumb" src="content/images/placeholder.png" alt="Project 2 thumbnail">
-      </a>
-      <div class="work-details">
-        <div class="work-title">Project name</div>
-        <p class="work-desc">Description</p>
-      </div>
-    </div>
-    <div class="work-item">
-      <a href="project3.html">
-        <img class="work-thumb" src="content/images/placeholder.png" alt="Project 3 thumbnail">
-      </a>
-      <div class="work-details">
-        <div class="work-title">Project name</div>
-        <p class="work-desc">Description</p>
-      </div>
-    </div>
-  </div>
-</section>
+        <div class="section-title">Projects</div>
+        <div class="selected-work">
+          <div class="work-item">
+            <a href="project1.html">
+              <img class="work-thumb" src="content/images/placeholder.png" alt="Project 1 thumbnail">
+            </a>
+            <div class="work-details">
+              <div class="work-title">Project name</div>
+              <p class="work-desc">Description</p>
+            </div>
+          </div>
+          <div class="work-item">
+            <a href="project2.html">
+              <img class="work-thumb" src="content/images/placeholder.png" alt="Project 2 thumbnail">
+            </a>
+            <div class="work-details">
+              <div class="work-title">Project name</div>
+              <p class="work-desc">Description</p>
+            </div>
+          </div>
+          <div class="work-item">
+            <a href="project3.html">
+              <img class="work-thumb" src="content/images/placeholder.png" alt="Project 3 thumbnail">
+            </a>
+            <div class="work-details">
+              <div class="work-title">Project name</div>
+              <p class="work-desc">Description</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </div>
   <div class="mobile-fun" style="display:none;">
     <!-- Fun section will remain hidden on mobile/tablet -->
   </div>
+  <!-- Footer paragraph: always at the bottom -->
+  <footer>
+    <p style="text-align:center; margin-top:48px; margin-bottom:18px; color:var(--color-text); font-size:.98em;">
+      © 2025 Roie Shalom<br>
+      Website under development — stay tuned for updates<br>
+      Contact: roiesh🐌gmail.com | Berlin, Germany
+    </p>
+  </footer>
   <script>
     fetch('content/experience.json')
       .then(res => res.json())
@@ -163,13 +171,5 @@
       setMode(!document.body.classList.contains('dark-mode'));
     }
   </script>
-  <section id="about" class="section">
-        <div class="section-title">Footer</div>
-        <p>
-© 2025 Roie <Shalom class="">
-<br>
-Website under development — stay tuned for updates <br>
-Contact: roiesh🐌gmail.com | Berlin, Germany        </p>
-      </section>
 </body>
 </html>
