--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
           </div>
         </div>
       </section>
+      <!-- Footer placed after all main content, at the end of main-content column -->
+      <footer>
+        <p style="text-align:center; margin-top:48px; margin-bottom:18px; color:var(--color-text); font-size:.98em;">
+          © 2025 Roie Shalom<br>
+          Website under development — stay tuned for updates<br>
+          Contact: roiesh🐌gmail.com | Berlin, Germany
+        </p>
+      </footer>
     </main>
   </div>
   <div class="mobile-fun" style="display:none;">
     <!-- Fun section will remain hidden on mobile/tablet -->
   </div>
-  <!-- Footer paragraph: always at the bottom -->
-  <footer>
-    <p style="text-align:center; margin-top:48px; margin-bottom:18px; color:var(--color-text); font-size:.98em;">
-      © 2025 Roie Shalom<br>
-      Website under development — stay tuned for updates<br>
-      Contact: roiesh🐌gmail.com | Berlin, Germany
-    </p>
-  </footer>
   <script>
     fetch('content/experience.json')
       .then(res => res.json())
