--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
         <nav class="social">
           <!-- Full SVG social icons here -->
         </nav>
+        <nav class="social">
+          <a href="https://github.com/roieshalom" target="_blank" aria-label="GitHub">
+            <svg viewBox="0 0 24 24" fill="currentColor" style="height:1.3em;width:1.3em;"><path d="M12 2C6.48 2 ..."/></svg>
+          </a>
+          <a href="https://linkedin.com/in/roieshalom" target="_blank" aria-label="LinkedIn">
+            <svg viewBox="0 0 24 24" fill="currentColor" style="height:1.3em;width:1.3em;"><path d="M19 0h-14c-2.76 ..."/></svg>
+          </a>
+          <a href="https://instagram.com/roieshalom" target="_blank" aria-label="Instagram">
+            <svg viewBox="0 0 24 24" fill="currentColor" style="height:1.3em;width:1.3em;"><path d="M12 2.163c3.204 ..."/></svg>
+          </a>
+        </nav>
       </div>
     </aside>
     <main class="main-content">
