social icon3-icons8

--- a/index.html
+++ b/index.html
@@ -42,18 +42,21 @@
         <div style="margin-bottom: 24px;"></div>
         <nav class="social">
           <!-- Full SVG social icons here -->
-        </nav>
-     <nav class="social">
-        <a href="https://github.com/roieshalom" target="_blank" aria-label="GitHub">
-          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.57 2 12.26c0 4.5 2.87 8.31 6.84 9.67.5.09.68-.22.68-.48 0-.24-.01-.87-.01-1.71-2.78.62-3.37-1.37-3.37-1.37-.45-1.18-1.1-1.5-1.1-1.5-.89-.62.07-.61.07-.61 1 .07 1.53 1.05 1.53 1.05 .88 1.53 2.3 1.09 2.86.83.09-.66.34-1.09.61-1.34-2.22-.26-4.55-1.16-4.55-5.2 0-1.15.39-2.1 1.03-2.84-.1-.26-.45-1.31.1-2.75 0 0 .84-.27 2.75 1.04A9.13 9.13 0 0 1 12 7.8c.85.004 1.71.11 2.51.32 1.91-1.31 2.75-1.04 2.75-1.04 .55 1.44.2 2.49.1 2.75 .64.74 1.03 1.69 1.03 2.84 0 4.05-2.33 4.93-4.56 5.18.35.31.65.92.65 1.85 0 1.34-.01 2.42-.01 2.75 0 .27.18.58.69.48A10.01 10.01 0 0 0 22 12.26c0-5.69-4.48-10.26-10-10.26z"></path></svg>
-        </a>
-        <a href="https://linkedin.com/in/roieshalom" target="_blank" aria-label="LinkedIn">
-          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11.75 20h-2.5v-8.5h2.5v8.5zm-1.25-9.75c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5zm13 9.75h-2.5v-4c0-2.01-2.5-1.86-2.5 0v4h-2.5v-8.5h2.5v1.1c1.16-2.15 6-2.31 6 2.05v5.35z"></path></svg>
-        </a>
-        <a href="https://instagram.com/roieshalom" target="_blank" aria-label="Instagram">
-          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.847.07 1.259.058 1.962.25 2.415.416.522.19.894.418 1.285.809 .391.391.619.763.809 1.285 .166.453.358 1.156.416 2.415 .058 1.263.07 1.643.07 4.847s-.012 3.584-.07 4.847c-.058 1.259-.25 1.962-.416 2.415-.19.522-.418.894-.809 1.285-.391.391-.763.619-1.285.809-.453.166-1.156.358-2.415.416-1.263.058-1.643.07-4.847.07s-3.584-.012-4.847-.07c-1.259-.058-1.962-.25-2.415-.416-.522-.19-.894-.418-1.285-.809-.391-.391-.619-.763-.809-1.285-.166-.453-.358-1.156-.416-2.415-.058-1.263-.07-1.643-.07-4.847s.012-3.584.07-4.847c.058-1.259.25-1.962.416-2.415.19-.522.418-.894.809-1.285.391-.391.763-.619 1.285-.809.453-.166 1.156-.358 2.415-.416 1.263-.058 1.643-.07 4.847-.07zm0-2.163c-3.259 0-3.667.012-4.945.072-1.277.06-2.146.25-2.897.53-.771.286-1.422.666-2.069 1.313-.647.647-1.027 1.298-1.313 2.069-.28.751-.47 1.62-.53 2.897-.06 1.278-.072 1.686-.072 4.946s.012 3.666.072 4.945c.06 1.277.25 2.146.53 2.897.286.771.666 1.422 1.313 2.069 .647.647 1.298 1.027 2.069 1.313.751.28 1.62.47 2.897.53 1.278.06 1.686.072 4.946.072s3.666-.012 4.945-.072c1.277-.06 2.146-.25 2.897-.53.771-.286 1.422-.666 2.069-1.313 .647-.647 1.027-1.298 1.313-2.069.28-.751.47-1.62.53-2.897.06-1.278.072-1.686.072-4.945s-.012-3.668-.072-4.946c-.06-1.277-.25-2.146-.53-2.897-.286-.771-.666-1.422-1.313-2.069-.647-.647-1.298-1.027-2.069-1.313-.751-.28-1.62-.47-2.897-.53-1.278-.06-1.686-.072-4.945-.072zm0 5.838a6.164 6.164 0 1 0 0 12.328 6.164 6.164 0 0 0 0-12.328zm0 10.036a3.872 3.872 0 1 1 0-7.744 3.872 3.872 0 0 1 0 7.744zm6.406-10.845a1.44 1.44 0 1 1 0-2.88 1.44 1.44 0 0 1 0 2.88z"></path></svg>
-        </a>
-      </nav>
+          <nav class="social">
+            <a href="mailto:roiesh@gmail.com" target="_blank" aria-label="Email">
+              <img src="https://img.icons8.com/ios-filled/32/000000/new-post.png" alt="Email" style="height:1.3em;width:1.3em;">
+            </a>
+            <a href="https://github.com/roieshalom" target="_blank" aria-label="GitHub">
+              <img src="https://img.icons8.com/ios-filled/32/000000/github.png" alt="GitHub" style="height:1.3em;width:1.3em;">
+            </a>
+            <a href="https://linkedin.com/in/roieshalom" target="_blank" aria-label="LinkedIn">
+              <img src="https://img.icons8.com/ios-filled/32/000000/linkedin.png" alt="LinkedIn" style="height:1.3em;width:1.3em;">
+            </a>
+            <a href="https://instagram.com/roieshalom" target="_blank" aria-label="Instagram">
+              <img src="https://img.icons8.com/ios-filled/32/000000/instagram-new.png" alt="Instagram" style="height:1.3em;width:1.3em;">
+            </a>
+          </nav>
+
       </div>
     </aside>
     <main class="main-content">
