--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <a href="https://github.com/roieshalom" target="_blank" aria-label="GitHub">
               <img src="https://img.icons8.com/ios-filled/32/000000/github.png" alt="GitHub" style="height:1.3em;width:1.3em;">
             </a>
-            <a href="https://linkedin.com/in/roieshalom" target="_blank" aria-label="LinkedIn">
+            <a href="https://linkedin.com/in/roiesh" target="_blank" aria-label="LinkedIn">
               <img src="https://img.icons8.com/ios-filled/32/000000/linkedin.png" alt="LinkedIn" style="height:1.3em;width:1.3em;">
             </a>
-            <a href="https://instagram.com/roieshalom" target="_blank" aria-label="Instagram">
+            <a href="https://www.instagram.com/roie_s/" target="_blank" aria-label="Instagram">
               <img src="https://img.icons8.com/ios-filled/32/000000/instagram-new.png" alt="Instagram" style="height:1.3em;width:1.3em;">
             </a>
           </nav>
