proj title font

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <img class="work-thumb" src="content/images/placeholder.png" alt="Project 2 thumbnail">
             </a>
             <div class="work-details">
-              <div class="work-title">Project name</div>
+              <div class="exp-role">Project name</div>
               <p class="work-desc">Description</p>
             </div>
           </div>
