--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <img class="work-thumb" src="content/images/placeholder.png" alt="Project 1 thumbnail">
             </a>
             <div class="work-details">
-              <div class="work-title">Project name</div>
+              <div class="exp-role">Project name</div>
               <p class="work-desc">Description</p>
             </div>
           </div>
@@ -97,7 +97,7 @@
               <img class="work-thumb" src="content/images/placeholder.png" alt="Project 3 thumbnail">
             </a>
             <div class="work-details">
-              <div class="work-title">Project name</div>
+              <div class="exp-role">Project name</div>
               <p class="work-desc">Description</p>
             </div>
           </div>
