social icons colors

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div style="margin-bottom: 24px;"></div>
         <nav class="social">
           <!-- Full SVG social icons here -->
-          <nav class="social">
+          <nav class="social" style="color: var(--color-link);">
             <a href="mailto:roiesh@gmail.com" target="_blank" aria-label="Email">
               <img src="https://img.icons8.com/ios-filled/32/000000/new-post.png" alt="Email" style="height:1.3em;width:1.3em;">
             </a>
