--- a/index.html
+++ b/index.html
@@ -42,20 +42,38 @@
         <div style="margin-bottom: 24px;"></div>
         <nav class="social">
           <!-- Full SVG social icons here -->
-          <nav class="social" style="color: var(--color-link);">
-            <a href="mailto:roiesh@gmail.com" target="_blank" aria-label="Email">
-              <img src="https://img.icons8.com/ios-filled/32/000000/new-post.png" alt="Email" style="height:1.3em;width:1.3em;">
-            </a>
-            <a href="https://github.com/roieshalom" target="_blank" aria-label="GitHub">
-              <img src="https://img.icons8.com/ios-filled/32/000000/github.png" alt="GitHub" style="height:1.3em;width:1.3em;">
-            </a>
-            <a href="https://linkedin.com/in/roiesh" target="_blank" aria-label="LinkedIn">
-              <img src="https://img.icons8.com/ios-filled/32/000000/linkedin.png" alt="LinkedIn" style="height:1.3em;width:1.3em;">
-            </a>
-            <a href="https://www.instagram.com/roie_s/" target="_blank" aria-label="Instagram">
-              <img src="https://img.icons8.com/ios-filled/32/000000/instagram-new.png" alt="Instagram" style="height:1.3em;width:1.3em;">
-            </a>
-          </nav>
+<nav class="social" style="color: var(--color-link);">
+  <a href="mailto:roiesh@gmail.com" target="_blank" aria-label="Email" title="Email" class="social-link">
+    <!-- envelope icon (inherits color) -->
+    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+      <rect x="2" y="4" width="20" height="16" rx="2"></rect>
+      <path d="M22 6l-10 7L2 6"></path>
+    </svg>
+  </a>
+
+  <a href="https://github.com/roieshalom" target="_blank" aria-label="GitHub" title="GitHub" class="social-link">
+    <!-- simple GitHub mark (solid) -->
+    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+      <path d="M12 .5C5.73.5.9 5.33.9 11.6c0 4.78 3.09 8.83 7.39 10.26.54.1.74-.23.74-.52 0-.26-.01-1.12-.02-2.03-3.01.65-3.64-1.45-3.64-1.45-.49-1.25-1.2-1.58-1.2-1.58-.98-.67.07-.66.07-.66 1.08.08 1.65 1.11 1.65 1.11.97 1.66 2.55 1.18 3.17.9.1-.7.38-1.18.69-1.45-2.4-.27-4.92-1.2-4.92-5.36 0-1.18.42-2.15 1.11-2.91-.11-.28-.48-1.41.11-2.94 0 0 .9-.29 2.95 1.11a10.2 10.2 0 0 1 2.69-.36c.91.01 1.83.12 2.69.36 2.05-1.4 2.95-1.11 2.95-1.11.6 1.53.23 2.66.11 2.94.69.76 1.11 1.73 1.11 2.91 0 4.17-2.52 5.09-4.92 5.36.39.34.73 1.02.73 2.06 0 1.49-.01 2.69-.01 3.06 0 .29.2.63.75.52A11.1 11.1 0 0 0 23.1 11.6C23.1 5.33 18.27.5 12 .5z"/>
+    </svg>
+  </a>
+
+  <a href="https://linkedin.com/in/roiesh" target="_blank" aria-label="LinkedIn" title="LinkedIn" class="social-link">
+    <!-- LinkedIn icon -->
+    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+      <path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.22 8.25h4.54V24H.22V8.25zM8.98 8.25h4.36v2.08h.06c.61-1.16 2.09-2.38 4.31-2.38 4.61 0 5.46 3.04 5.46 6.99V24h-4.54v-7.7c0-1.84-.03-4.22-2.57-4.22-2.57 0-2.96 2.01-2.96 4.09V24H8.98V8.25z"/>
+    </svg>
+  </a>
+
+  <a href="https://www.instagram.com/roie_s/" target="_blank" aria-label="Instagram" title="Instagram" class="social-link">
+    <!-- Instagram icon -->
+    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+      <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
+    </svg>
+  </a>
+</nav>
 
       </div>
     </aside>
