--- a/index.html
+++ b/index.html
@@ -43,37 +43,32 @@
         <nav class="social">
           <!-- Full SVG social icons here -->
 <nav class="social" style="color: var(--color-link);">
-  <a href="mailto:roiesh@gmail.com" target="_blank" aria-label="Email" title="Email" class="social-link">
-    <!-- envelope icon (inherits color) -->
-    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-      <rect x="2" y="4" width="20" height="16" rx="2"></rect>
-      <path d="M22 6l-10 7L2 6"></path>
+  <a href="mailto:roiesh@gmail.com" target="_blank" aria-label="Email">
+    <!-- Icons8 Mail SVG -->
+    <svg viewBox="0 0 32 32" fill="currentColor" width="1.3em" height="1.3em">
+      <path d="M4 8c-1.104 0-2 .896-2 2v12c0 1.104.896 2 2 2h24c1.104 0 2-.896 2-2V10c0-1.104-.896-2-2-2H4zm0 2h24v.511l-12 7.5-12-7.5V10zm24 12H4v-.511l12-7.5 12 7.5V22zm-12-7.049L5.197 12.2 16 19.25l10.803-7.05L16 14.951z"/>
     </svg>
   </a>
-
-  <a href="https://github.com/roieshalom" target="_blank" aria-label="GitHub" title="GitHub" class="social-link">
-    <!-- simple GitHub mark (solid) -->
-    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-      <path d="M12 .5C5.73.5.9 5.33.9 11.6c0 4.78 3.09 8.83 7.39 10.26.54.1.74-.23.74-.52 0-.26-.01-1.12-.02-2.03-3.01.65-3.64-1.45-3.64-1.45-.49-1.25-1.2-1.58-1.2-1.58-.98-.67.07-.66.07-.66 1.08.08 1.65 1.11 1.65 1.11.97 1.66 2.55 1.18 3.17.9.1-.7.38-1.18.69-1.45-2.4-.27-4.92-1.2-4.92-5.36 0-1.18.42-2.15 1.11-2.91-.11-.28-.48-1.41.11-2.94 0 0 .9-.29 2.95 1.11a10.2 10.2 0 0 1 2.69-.36c.91.01 1.83.12 2.69.36 2.05-1.4 2.95-1.11 2.95-1.11.6 1.53.23 2.66.11 2.94.69.76 1.11 1.73 1.11 2.91 0 4.17-2.52 5.09-4.92 5.36.39.34.73 1.02.73 2.06 0 1.49-.01 2.69-.01 3.06 0 .29.2.63.75.52A11.1 11.1 0 0 0 23.1 11.6C23.1 5.33 18.27.5 12 .5z"/>
+  <a href="https://github.com/roieshalom" target="_blank" aria-label="GitHub">
+    <!-- Icons8 GitHub SVG -->
+    <svg viewBox="0 0 32 32" fill="currentColor" width="1.3em" height="1.3em">
+      <path d="M16 3C9.373 3 4 8.373 4 15c0 5.303 3.438 9.8 8.207 11.387.6.113.793-.26.793-.577 0-.285-.011-1.042-.016-2.045-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.089-.746.083-.732.083-.732 1.205.085 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.494.997.108-.775.418-1.305.761-1.606-2.665-.304-5.467-1.333-5.467-5.931 0-1.309.469-2.381 1.236-3.221-.124-.304-.536-1.527.117-3.183 0 0 1.008-.323 3.3 1.23a11.45 11.45 0 013.003-.404c1.019.005 2.047.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.655 1.656.243 2.879.119 3.183.77.84 1.235 1.912 1.235 3.221 0 4.609-2.805 5.625-5.476 5.922.43.371.814 1.104.814 2.229 0 1.609-.015 2.91-.015 3.309 0 .32.192.694.799.576C24.565 24.797 28 20.301 28 15c0-6.627-5.373-12-12-12z"/>
     </svg>
   </a>
-
-  <a href="https://linkedin.com/in/roiesh" target="_blank" aria-label="LinkedIn" title="LinkedIn" class="social-link">
-    <!-- LinkedIn icon -->
-    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-      <path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.22 8.25h4.54V24H.22V8.25zM8.98 8.25h4.36v2.08h.06c.61-1.16 2.09-2.38 4.31-2.38 4.61 0 5.46 3.04 5.46 6.99V24h-4.54v-7.7c0-1.84-.03-4.22-2.57-4.22-2.57 0-2.96 2.01-2.96 4.09V24H8.98V8.25z"/>
+  <a href="https://linkedin.com/in/roiesh" target="_blank" aria-label="LinkedIn">
+    <!-- Icons8 LinkedIn SVG -->
+    <svg viewBox="0 0 32 32" fill="currentColor" width="1.3em" height="1.3em">
+      <path d="M27 3H5a2 2 0 00-2 2v22a2 2 0 002 2h22a2 2 0 002-2V5a2 2 0 00-2-2zm-16 24H7V13h4zm-2-12a2 2 0 110-4 2 2 0 010 4zm18 12h-4v-6c0-1.102-.898-2-2-2s-2 .898-2 2v6h-4V13h4v2.072C18.441 14.11 19.54 13 21 13c2.206 0 4 1.794 4 4v10z"/>
     </svg>
   </a>
-
-  <a href="https://www.instagram.com/roie_s/" target="_blank" aria-label="Instagram" title="Instagram" class="social-link">
-    <!-- Instagram icon -->
-    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-      <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
+  <a href="https://www.instagram.com/roie_s/" target="_blank" aria-label="Instagram">
+    <!-- Icons8 Instagram SVG -->
+    <svg viewBox="0 0 32 32" fill="currentColor" width="1.3em" height="1.3em">
+      <path d="M16 7a9 9 0 109 9 9.009 9.009 0 00-9-9zm0 15a6 6 0 116-6 6.006 6.006 0 01-6 6zm8.5-13a1.5 1.5 0 11-1.5-1.5A1.502 1.502 0 0124.5 9zm3.5 1.845A8.991 8.991 0 0023.845 6.5 1.5 1.5 0 0022 5H10a1.5 1.5 0 00-1.845 1.5A8.991 8.991 0 005.5 8.155 1.5 1.5 0 004 10v12a1.5 1.5 0 001.5 1.845A8.991 8.991 0 008.155 25.5 1.5 1.5 0 0010 27h12a1.5 1.5 0 001.845-1.5A8.991 8.991 0 0026.5 23.845 1.5 1.5 0 0028 22V10a1.5 1.5 0 00-1.5-1.845zM16 22a6 6 0 116-6 6.006 6.006 0 01-6 6z"/>
     </svg>
   </a>
 </nav>
+
 
       </div>
     </aside>
