social icons svg3

--- a/index.html
+++ b/index.html
@@ -43,32 +43,31 @@
         <nav class="social">
           <!-- Full SVG social icons here -->
 <nav class="social" style="color: var(--color-link);">
+  <!-- Email (Lucide) -->
   <a href="mailto:roiesh@gmail.com" target="_blank" aria-label="Email">
-    <!-- Icons8 Mail SVG -->
-    <svg viewBox="0 0 32 32" fill="currentColor" width="1.3em" height="1.3em">
-      <path d="M4 8c-1.104 0-2 .896-2 2v12c0 1.104.896 2 2 2h24c1.104 0 2-.896 2-2V10c0-1.104-.896-2-2-2H4zm0 2h24v.511l-12 7.5-12-7.5V10zm24 12H4v-.511l12-7.5 12 7.5V22zm-12-7.049L5.197 12.2 16 19.25l10.803-7.05L16 14.951z"/>
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="2" y="4" width="20" height="16" rx="2"/><polyline points="22,6 12,13 2,6"/>
     </svg>
   </a>
+  <!-- GitHub -->
   <a href="https://github.com/roieshalom" target="_blank" aria-label="GitHub">
-    <!-- Icons8 GitHub SVG -->
-    <svg viewBox="0 0 32 32" fill="currentColor" width="1.3em" height="1.3em">
-      <path d="M16 3C9.373 3 4 8.373 4 15c0 5.303 3.438 9.8 8.207 11.387.6.113.793-.26.793-.577 0-.285-.011-1.042-.016-2.045-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.089-.746.083-.732.083-.732 1.205.085 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.494.997.108-.775.418-1.305.761-1.606-2.665-.304-5.467-1.333-5.467-5.931 0-1.309.469-2.381 1.236-3.221-.124-.304-.536-1.527.117-3.183 0 0 1.008-.323 3.3 1.23a11.45 11.45 0 013.003-.404c1.019.005 2.047.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.655 1.656.243 2.879.119 3.183.77.84 1.235 1.912 1.235 3.221 0 4.609-2.805 5.625-5.476 5.922.43.371.814 1.104.814 2.229 0 1.609-.015 2.91-.015 3.309 0 .32.192.694.799.576C24.565 24.797 28 20.301 28 15c0-6.627-5.373-12-12-12z"/>
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M12 .5C5.73.5.5 5.73.5 12.02c0 5.09 3.29 9.4 7.86 10.92.57.1.78-.24.78-.54 0-.27-.01-1.16-.02-2.1-3.2.7-3.88-1.39-3.88-1.39-.52-1.3-1.27-1.64-1.27-1.64-1.04-.72.08-.71.08-.71 1.15.08 1.75 1.18 1.75 1.18 1.03 1.76 2.71 1.25 3.37.95.1-.75.4-1.25.73-1.53-2.55-.29-5.24-1.28-5.24-5.7 0-1.26.45-2.29 1.17-3.1-.12-.29-.5-1.47.11-3.06 0 0 .95-.31 3.12 1.19a10.75 10.75 0 012.85-.39c.97.01 1.95.13 2.86.39 2.16-1.5 3.11-1.19 3.11-1.19.62 1.59.23 2.77.11 3.06.73.81 1.17 1.84 1.17 3.1 0 4.43-2.7 5.41-5.28 5.69.41.36.78 1.08.78 2.19 0 1.59-.01 2.88-.01 3.27 0 .3.21.65.79.54C20.22 21.42 23.5 17.1 23.5 12.02 23.5 5.73 18.27.5 12 .5z"/>
     </svg>
   </a>
+  <!-- LinkedIn (Lucide) -->
   <a href="https://linkedin.com/in/roiesh" target="_blank" aria-label="LinkedIn">
-    <!-- Icons8 LinkedIn SVG -->
-    <svg viewBox="0 0 32 32" fill="currentColor" width="1.3em" height="1.3em">
-      <path d="M27 3H5a2 2 0 00-2 2v22a2 2 0 002 2h22a2 2 0 002-2V5a2 2 0 00-2-2zm-16 24H7V13h4zm-2-12a2 2 0 110-4 2 2 0 010 4zm18 12h-4v-6c0-1.102-.898-2-2-2s-2 .898-2 2v6h-4V13h4v2.072C18.441 14.11 19.54 13 21 13c2.206 0 4 1.794 4 4v10z"/>
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="2" y="2" width="20" height="20" rx="2"/><line x1="16" y1="8" x2="16" y2="16"/><line x1="12" y1="12" x2="12" y2="16"/><line x1="8" y1="12" x2="8" y2="16"/><circle cx="8" cy="8" r="1"/>
     </svg>
   </a>
+  <!-- Instagram (Lucide) -->
   <a href="https://www.instagram.com/roie_s/" target="_blank" aria-label="Instagram">
-    <!-- Icons8 Instagram SVG -->
-    <svg viewBox="0 0 32 32" fill="currentColor" width="1.3em" height="1.3em">
-      <path d="M16 7a9 9 0 109 9 9.009 9.009 0 00-9-9zm0 15a6 6 0 116-6 6.006 6.006 0 01-6 6zm8.5-13a1.5 1.5 0 11-1.5-1.5A1.502 1.502 0 0124.5 9zm3.5 1.845A8.991 8.991 0 0023.845 6.5 1.5 1.5 0 0022 5H10a1.5 1.5 0 00-1.845 1.5A8.991 8.991 0 005.5 8.155 1.5 1.5 0 004 10v12a1.5 1.5 0 001.5 1.845A8.991 8.991 0 008.155 25.5 1.5 1.5 0 0010 27h12a1.5 1.5 0 001.845-1.5A8.991 8.991 0 0026.5 23.845 1.5 1.5 0 0028 22V10a1.5 1.5 0 00-1.5-1.845zM16 22a6 6 0 116-6 6.006 6.006 0 01-6 6z"/>
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/>
     </svg>
   </a>
 </nav>
-
 
       </div>
     </aside>
