--- a/index.html
+++ b/index.html
@@ -42,18 +42,33 @@
         <div style="margin-bottom: 24px;"></div>
         <nav class="social">
           <!-- Full SVG social icons here -->
-<nav class="social" style="color:var(--color-link);">
-  <a href="mailto:roiesh@gmail.com" aria-label="Email" target="_blank">
-    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"/><polyline points="22,6 12,13 2,6"/></svg>
+<nav class="social" style="color:var(--color-link); display: flex; gap: 18px;">
+  <a href="mailto:roiesh@gmail.com" aria-label="Email">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="1.3em" height="1.3em">
+      <rect x="3" y="5" width="18" height="14" rx="2"></rect>
+      <polyline points="21,7 12,13 3,7"></polyline>
+    </svg>
   </a>
-  <a href="https://github.com/roieshalom" aria-label="GitHub" target="_blank">
-    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 .5C5.73.5.5 5.73.5 12.02c0 5.09 3.29 9.4 7.86 10.92.57.1.78-.24.78-.54 0-.27-.01-1.16-.02-2.1-3.2.7-3.88-1.39-3.88-1.39-.52-1.3-1.27-1.64-1.27-1.64-1.04-.72.08-.71.08-.71 1.15.08 1.75 1.18 1.75 1.18 1.03 1.76 2.71 1.25 3.37.95.1-.75.4-1.25.73-1.53-2.55-.29-5.24-1.28-5.24-5.7 0-1.26.45-2.29 1.17-3.1-.12-.29-.5-1.47.11-3.06 0 0 .95-.31 3.12 1.19a10.75 10.75 0 012.85-.39c.97.01 1.95.13 2.86.39 2.16-1.5 3.11-1.19 3.11-1.19.62 1.59.23 2.77.11 3.06.73.81 1.17 1.84 1.17 3.1 0 4.43-2.7 5.41-5.28 5.69.41.36.78 1.08.78 2.19 0 1.59-.01 2.88-.01 3.27 0 .3.21.65.79.54C20.22 21.42 23.5 17.1 23.5 12.02 23.5 5.73 18.27.5 12 .5z"/></svg>
+  <a href="https://github.com/roieshalom" aria-label="GitHub">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" width="1.3em" height="1.3em">
+      <path d="M12 .5C5.73.5.5 5.73.5 12.02c0 5.09 3.29 9.4 7.86 10.92.57.1.78-.24.78-.54 0-.27-.01-1.16-.02-2.1-3.2.7-3.88-1.39-3.88-1.39-.52-1.3-1.27-1.64-1.27-1.64-1.04-.72.08-.71.08-.71 1.15.08 1.75 1.18 1.75 1.18 1.03 1.76 2.71 1.25 3.37.95.1-.75.4-1.25.73-1.53-2.55-.29-5.24-1.28-5.24-5.7 0-1.26.45-2.29 1.17-3.1-.12-.29-.5-1.47.11-3.06 0 0 .95-.31 3.12 1.19a10.75 10.75 0 012.85-.39c.97.01 1.95.13 2.86.39 2.16-1.5 3.11-1.19 3.11-1.19.62 1.59.23 2.77.11 3.06.73.81 1.17 1.84 1.17 3.1 0 4.43-2.7 5.41-5.28 5.69.41.36.78 1.08.78 2.19 0 1.59-.01 2.88-.01 3.27 0 .3.21.65.79.54C20.22 21.42 23.5 17.1 23.5 12.02 23.5 5.73 18.27.5 12 .5z"/>
+    </svg>
   </a>
-  <a href="https://linkedin.com/in/roiesh" aria-label="LinkedIn" target="_blank">
-    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="2"/><line x1="16" y1="8" x2="16" y2="16"/><line x1="12" y1="12" x2="12" y2="16"/><line x1="8" y1="12" x2="8" y2="16"/><circle cx="8" cy="8" r="1"/></svg>
+  <a href="https://linkedin.com/in/roiesh" aria-label="LinkedIn">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="1.3em" height="1.3em">
+      <rect x="2" y="2" width="20" height="20" rx="2"></rect>
+      <line x1="16" y1="8" x2="16" y2="16"></line>
+      <line x1="12" y1="12" x2="12" y2="16"></line>
+      <line x1="8" y1="12" x2="8" y2="16"></line>
+      <circle cx="8" cy="8" r="1"></circle>
+    </svg>
   </a>
-  <a href="https://www.instagram.com/roie_s/" aria-label="Instagram" target="_blank">
-    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/></svg>
+  <a href="https://www.instagram.com/roie_s/" aria-label="Instagram">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="1.3em" height="1.3em">
+      <rect x="2" y="2" width="20" height="20" rx="5"></rect>
+      <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"></path>
+      <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
+    </svg>
   </a>
 </nav>
 
