--- a/index.html
+++ b/index.html
@@ -43,31 +43,28 @@
         <nav class="social">
           <!-- Full SVG social icons here -->
 <nav class="social" style="color:var(--color-link); display: flex; gap: 18px;">
+  <!-- Email (material design filled) -->
   <a href="mailto:roiesh@gmail.com" aria-label="Email">
-    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="1.3em" height="1.3em">
-      <rect x="3" y="5" width="18" height="14" rx="2"></rect>
-      <polyline points="21,7 12,13 3,7"></polyline>
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="currentColor">
+      <path d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.1.89 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.11-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2zm0 10H4v-8l8 5 8-5v8z"/>
     </svg>
   </a>
+  <!-- GitHub (remixicon filled) -->
   <a href="https://github.com/roieshalom" aria-label="GitHub">
-    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" width="1.3em" height="1.3em">
-      <path d="M12 .5C5.73.5.5 5.73.5 12.02c0 5.09 3.29 9.4 7.86 10.92.57.1.78-.24.78-.54 0-.27-.01-1.16-.02-2.1-3.2.7-3.88-1.39-3.88-1.39-.52-1.3-1.27-1.64-1.27-1.64-1.04-.72.08-.71.08-.71 1.15.08 1.75 1.18 1.75 1.18 1.03 1.76 2.71 1.25 3.37.95.1-.75.4-1.25.73-1.53-2.55-.29-5.24-1.28-5.24-5.7 0-1.26.45-2.29 1.17-3.1-.12-.29-.5-1.47.11-3.06 0 0 .95-.31 3.12 1.19a10.75 10.75 0 012.85-.39c.97.01 1.95.13 2.86.39 2.16-1.5 3.11-1.19 3.11-1.19.62 1.59.23 2.77.11 3.06.73.81 1.17 1.84 1.17 3.1 0 4.43-2.7 5.41-5.28 5.69.41.36.78 1.08.78 2.19 0 1.59-.01 2.88-.01 3.27 0 .3.21.65.79.54C20.22 21.42 23.5 17.1 23.5 12.02 23.5 5.73 18.27.5 12 .5z"/>
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="currentColor">
+      <path d="M12 .296C5.412.296.003 5.706.003 12.293c0 5.303 3.438 9.8 8.207 11.387.6.11.793-.26.793-.577 0-.285-.01-1.04-.015-2.04C6.14 21.14 5.37 19.5 5.37 19.5c-.546-1.387-1.333-1.756-1.333-1.756-1.089-.747.084-.732.084-.732 1.204.085 1.84 1.237 1.84 1.237 1.07 1.834 2.809 1.305 3.493.998.11-.775.418-1.305.762-1.606-2.664-.304-5.467-1.333-5.467-5.932 0-1.31.469-2.38 1.238-3.22-.123-.304-.537-1.528.117-3.186 0 0 1.01-.324 3.304 1.23.958-.267 1.987-.401 3.01-.405 1.022.004 2.05.138 3.01.405 2.292-1.554 3.3-1.23 3.3-1.23.655 1.658.242 2.882.12 3.186.77.84 1.237 1.91 1.237 3.22 0 4.61-2.805 5.625-5.47 5.92.429.37.817 1.094.817 2.205 0 1.593-.014 2.877-.014 3.267 0 .318.19.692.799.574C20.565 22.09 24.01 17.592 24.01 12.293c0-6.587-5.409-11.997-11.999-11.997z"/>
     </svg>
   </a>
+  <!-- LinkedIn (remixicon filled) -->
   <a href="https://linkedin.com/in/roiesh" aria-label="LinkedIn">
-    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="1.3em" height="1.3em">
-      <rect x="2" y="2" width="20" height="20" rx="2"></rect>
-      <line x1="16" y1="8" x2="16" y2="16"></line>
-      <line x1="12" y1="12" x2="12" y2="16"></line>
-      <line x1="8" y1="12" x2="8" y2="16"></line>
-      <circle cx="8" cy="8" r="1"></circle>
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="currentColor">
+      <path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zM8.112 19H5.466v-8.332h2.646V19zm-1.324-9.502A1.538 1.538 0 1 1 8.325 8c0 .85-.686 1.498-1.537 1.498zM19 19h-2.646v-4.204c0-.978-.35-1.65-1.254-1.65-.684 0-1.093.46-1.273.904-.066.161-.084.384-.084.609V19h-2.646s.035-7.443 0-8.332h2.646v1.18c.352-.546.981-1.325 2.384-1.325 1.74 0 3.045 1.136 3.045 3.579V19z"/>
     </svg>
   </a>
+  <!-- Instagram (remixicon filled) -->
   <a href="https://www.instagram.com/roie_s/" aria-label="Instagram">
-    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="1.3em" height="1.3em">
-      <rect x="2" y="2" width="20" height="20" rx="5"></rect>
-      <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"></path>
-      <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="currentColor">
+      <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3h10zm-5 3a5 5 0 100 10 5 5 0 000-10zm5 1a1 1 0 110 2 1 1 0 010-2z"/>
     </svg>
   </a>
 </nav>
