--- a/index.html
+++ b/index.html
@@ -43,31 +43,32 @@
         <nav class="social">
           <!-- Full SVG social icons here -->
 <nav class="social" style="color:var(--color-link); display: flex; gap: 18px;">
-  <!-- Email (material design filled) -->
   <a href="mailto:roiesh@gmail.com" aria-label="Email">
-    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="currentColor">
-      <path d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.1.89 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.11-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2zm0 10H4v-8l8 5 8-5v8z"/>
+    <!-- Feather Mail -->
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="2" y="4" width="20" height="16" rx="2"/><polyline points="22,6 12,13 2,6"/>
     </svg>
   </a>
-  <!-- GitHub (remixicon filled) -->
   <a href="https://github.com/roieshalom" aria-label="GitHub">
-    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="currentColor">
-      <path d="M12 .296C5.412.296.003 5.706.003 12.293c0 5.303 3.438 9.8 8.207 11.387.6.11.793-.26.793-.577 0-.285-.01-1.04-.015-2.04C6.14 21.14 5.37 19.5 5.37 19.5c-.546-1.387-1.333-1.756-1.333-1.756-1.089-.747.084-.732.084-.732 1.204.085 1.84 1.237 1.84 1.237 1.07 1.834 2.809 1.305 3.493.998.11-.775.418-1.305.762-1.606-2.664-.304-5.467-1.333-5.467-5.932 0-1.31.469-2.38 1.238-3.22-.123-.304-.537-1.528.117-3.186 0 0 1.01-.324 3.304 1.23.958-.267 1.987-.401 3.01-.405 1.022.004 2.05.138 3.01.405 2.292-1.554 3.3-1.23 3.3-1.23.655 1.658.242 2.882.12 3.186.77.84 1.237 1.91 1.237 3.22 0 4.61-2.805 5.625-5.47 5.92.429.37.817 1.094.817 2.205 0 1.593-.014 2.877-.014 3.267 0 .318.19.692.799.574C20.565 22.09 24.01 17.592 24.01 12.293c0-6.587-5.409-11.997-11.999-11.997z"/>
+    <!-- Feather GitHub -->
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M12 2C6.475 2 2 6.48 2 12.081c0 4.47 2.927 8.258 6.818 9.61.499.092.682-.217.682-.483 0-.238-.008-.866-.013-1.7-2.776.604-3.363-1.338-3.363-1.338-.454-1.157-1.11-1.465-1.11-1.465-.908-.617.069-.605.069-.605 1.005.07 1.534 1.033 1.534 1.033.893 1.531 2.341 1.09 2.91.834.091-.647.35-1.091.637-1.343-2.218-.252-4.554-1.11-4.554-4.943 0-1.091.389-1.983 1.028-2.682-.104-.253-.446-1.268.098-2.643 0 0 .84-.269 2.752 1.024A9.521 9.521 0 0112 7.849c.85.004 1.709.115 2.511.337 1.911-1.292 2.752-1.024 2.752-1.024.546 1.376.202 2.391.099 2.643.641.699 1.028 1.591 1.028 2.682 0 3.842-2.339 4.687-4.566 4.936.358.311.678.924.678 1.862 0 1.344-.012 2.427-.012 2.757 0 .268.18.58.688.482C19.075 20.334 22 16.548 22 12.081 22 6.48 17.525 2 12 2z"/>
     </svg>
   </a>
-  <!-- LinkedIn (remixicon filled) -->
   <a href="https://linkedin.com/in/roiesh" aria-label="LinkedIn">
-    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="currentColor">
-      <path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zM8.112 19H5.466v-8.332h2.646V19zm-1.324-9.502A1.538 1.538 0 1 1 8.325 8c0 .85-.686 1.498-1.537 1.498zM19 19h-2.646v-4.204c0-.978-.35-1.65-1.254-1.65-.684 0-1.093.46-1.273.904-.066.161-.084.384-.084.609V19h-2.646s.035-7.443 0-8.332h2.646v1.18c.352-.546.981-1.325 2.384-1.325 1.74 0 3.045 1.136 3.045 3.579V19z"/>
+    <!-- Feather LinkedIn -->
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="2" y="2" width="20" height="20" rx="2"/><line x1="16" y1="8" x2="16" y2="16"/><line x1="12" y1="12" x2="12" y2="16"/><line x1="8" y1="12" x2="8" y2="16"/><circle cx="8" cy="8" r="1"/>
     </svg>
   </a>
-  <!-- Instagram (remixicon filled) -->
   <a href="https://www.instagram.com/roie_s/" aria-label="Instagram">
-    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="currentColor">
-      <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3h10zm-5 3a5 5 0 100 10 5 5 0 000-10zm5 1a1 1 0 110 2 1 1 0 010-2z"/>
+    <!-- Feather Instagram -->
+    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/>
     </svg>
   </a>
 </nav>
+
 
       </div>
     </aside>
