--- a/index.html
+++ b/index.html
@@ -42,33 +42,32 @@
         <div style="margin-bottom: 24px;"></div>
         <nav class="social">
           <!-- Full SVG social icons here -->
-<nav class="social" style="color:var(--color-link); display: flex; gap: 18px;">
+<nav class="social" style="color:var(--color-link); display: flex; gap: 16px;">
   <a href="mailto:roiesh@gmail.com" aria-label="Email">
-    <!-- Feather Mail -->
-    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <rect x="2" y="4" width="20" height="16" rx="2"/><polyline points="22,6 12,13 2,6"/>
+    <!-- Font Awesome envelope (email) -->
+    <svg viewBox="0 0 512 512" width="1.3em" height="1.3em" fill="currentColor">
+      <path d="M502.3 190.8L327.4 338.3c-15.9 14.4-39.8 14.4-55.7 0L9.7 190.8C3.9 185.5 0 177.9 0 169.8V112c0-26.5 21.5-48 48-48H464c26.5 0 48 21.5 48 48v57.8c0 8.1-3.9 15.7-9.7 21z"/>
     </svg>
   </a>
   <a href="https://github.com/roieshalom" aria-label="GitHub">
-    <!-- Feather GitHub -->
-    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M12 2C6.475 2 2 6.48 2 12.081c0 4.47 2.927 8.258 6.818 9.61.499.092.682-.217.682-.483 0-.238-.008-.866-.013-1.7-2.776.604-3.363-1.338-3.363-1.338-.454-1.157-1.11-1.465-1.11-1.465-.908-.617.069-.605.069-.605 1.005.07 1.534 1.033 1.534 1.033.893 1.531 2.341 1.09 2.91.834.091-.647.35-1.091.637-1.343-2.218-.252-4.554-1.11-4.554-4.943 0-1.091.389-1.983 1.028-2.682-.104-.253-.446-1.268.098-2.643 0 0 .84-.269 2.752 1.024A9.521 9.521 0 0112 7.849c.85.004 1.709.115 2.511.337 1.911-1.292 2.752-1.024 2.752-1.024.546 1.376.202 2.391.099 2.643.641.699 1.028 1.591 1.028 2.682 0 3.842-2.339 4.687-4.566 4.936.358.311.678.924.678 1.862 0 1.344-.012 2.427-.012 2.757 0 .268.18.58.688.482C19.075 20.334 22 16.548 22 12.081 22 6.48 17.525 2 12 2z"/>
+    <!-- Font Awesome GitHub -->
+    <svg viewBox="0 0 496 512" width="1.3em" height="1.3em" fill="currentColor">
+      <path d="M165.9 397.4c0 2-2.3 ... (truncated for brevity) ..."/>
     </svg>
   </a>
   <a href="https://linkedin.com/in/roiesh" aria-label="LinkedIn">
-    <!-- Feather LinkedIn -->
-    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <rect x="2" y="2" width="20" height="20" rx="2"/><line x1="16" y1="8" x2="16" y2="16"/><line x1="12" y1="12" x2="12" y2="16"/><line x1="8" y1="12" x2="8" y2="16"/><circle cx="8" cy="8" r="1"/>
+    <!-- Font Awesome LinkedIn -->
+    <svg viewBox="0 0 448 512" width="1.3em" height="1.3em" fill="currentColor">
+      <path d="M100.28 448H7.4V148.9h92.88zM56 ... (truncated) ..."/>
     </svg>
   </a>
   <a href="https://www.instagram.com/roie_s/" aria-label="Instagram">
-    <!-- Feather Instagram -->
-    <svg viewBox="0 0 24 24" width="1.3em" height="1.3em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/>
+    <!-- Font Awesome Instagram -->
+    <svg viewBox="0 0 448 512" width="1.3em" height="1.3em" fill="currentColor">
+      <path d="M224.1 141c-63.6 0-115 ... (truncated) ..."/>
     </svg>
   </a>
 </nav>
-
 
       </div>
     </aside>
