--- a/index.html
+++ b/index.html
@@ -42,32 +42,36 @@
         <div style="margin-bottom: 24px;"></div>
         <nav class="social">
           <!-- Full SVG social icons here -->
-<nav class="social" style="color:var(--color-link); display: flex; gap: 16px;">
+<nav class="social" style="color: var(--color-link); display: flex; gap: 16px;">
+  <!-- Email icon: using Heroicons solid email glyph -->
   <a href="mailto:roiesh@gmail.com" aria-label="Email">
-    <!-- Font Awesome envelope (email) -->
-    <svg viewBox="0 0 512 512" width="1.3em" height="1.3em" fill="currentColor">
-      <path d="M502.3 190.8L327.4 338.3c-15.9 14.4-39.8 14.4-55.7 0L9.7 190.8C3.9 185.5 0 177.9 0 169.8V112c0-26.5 21.5-48 48-48H464c26.5 0 48 21.5 48 48v57.8c0 8.1-3.9 15.7-9.7 21z"/>
+    <svg width="1.3em" height="1.3em" viewBox="0 0 20 20" fill="var(--color-link)" xmlns="http://www.w3.org/2000/svg">
+      <path d="M2.004 5.884a2 2 0 0 1 1.72-1.116h12.552a2 2 0 0 1 1.72 1.116L10 11.383 2.004 5.884Zm-.004 1.947V14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.83l-7.445 5.637a1 1 0 0 1-1.11 0L2 7.83Z"/>
     </svg>
   </a>
-  <a href="https://github.com/roieshalom" aria-label="GitHub">
-    <!-- Font Awesome GitHub -->
-    <svg viewBox="0 0 496 512" width="1.3em" height="1.3em" fill="currentColor">
-      <path d="M165.9 397.4c0 2-2.3 ... (truncated for brevity) ..."/>
+
+  <!-- GitHub SVG from SimpleIcons -->
+  <a href="https://github.com/roieshalom" aria-label="GitHub" target="_blank">
+    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="var(--color-link)" xmlns="http://www.w3.org/2000/svg">
+      <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.012-1.232-.018-2.233-3.338.726-4.042-1.415-4.042-1.415-.546-1.387-1.333-1.756-1.333-1.756-1.087-.744.084-.729.084-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.809 1.304 3.495.997.108-.775.417-1.305.763-1.604-2.665-.3-5.466-1.335-5.466-5.933 0-1.31.469-2.38 1.236-3.221-.124-.303-.535-1.521.117-3.176 0 0 1.008-.322 3.301 1.23.96-.267 1.98-.399 2.997-.404 1.016.005 2.037.137 2.999.404 2.289-1.553 3.294-1.23 3.294-1.23.654 1.655.243 2.873.12 3.176.77.841 1.234 1.911 1.234 3.221 0 4.609-2.804 5.629-5.475 5.921.43.371.823 1.104.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .321.216.694.824.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"/>
     </svg>
   </a>
-  <a href="https://linkedin.com/in/roiesh" aria-label="LinkedIn">
-    <!-- Font Awesome LinkedIn -->
-    <svg viewBox="0 0 448 512" width="1.3em" height="1.3em" fill="currentColor">
-      <path d="M100.28 448H7.4V148.9h92.88zM56 ... (truncated) ..."/>
+
+  <!-- LinkedIn SVG from SimpleIcons -->
+  <a href="https://linkedin.com/in/roiesh" aria-label="LinkedIn" target="_blank">
+    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="var(--color-link)" xmlns="http://www.w3.org/2000/svg">
+      <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
     </svg>
   </a>
-  <a href="https://www.instagram.com/roie_s/" aria-label="Instagram">
-    <!-- Font Awesome Instagram -->
-    <svg viewBox="0 0 448 512" width="1.3em" height="1.3em" fill="currentColor">
-      <path d="M224.1 141c-63.6 0-115 ... (truncated) ..."/>
+
+  <!-- Instagram SVG from SimpleIcons -->
+  <a href="https://www.instagram.com/roie_s/" aria-label="Instagram" target="_blank">
+    <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="var(--color-link)" xmlns="http://www.w3.org/2000/svg">
+      <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.334 3.608 1.308.975.975 1.246 2.242 1.308 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.334 2.633-1.308 3.608-.975.975-2.242 1.246-3.608 1.308-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.334-3.608-1.308-.975-.975-1.246-2.242-1.308-3.608C2.175 15.647 2.163 15.267 2.163 12s.012-3.584.07-4.85c.062-1.366.334-2.633 1.308-3.608C4.516 2.567 5.783 2.296 7.149 2.234 8.415 2.176 8.795 2.163 12 2.163zm0-2.163C8.741 0 8.332.012 7.049.072 5.536.135 4.267.418 3.292 1.392 2.318 2.366 2.035 3.634 1.972 5.147.912 8.741.912 15.259 1.972 18.853c.063 1.514.346 2.781 1.32 3.755.974.973 2.242 1.256 3.755 1.319 1.514.06 1.923.072 5.181.072 3.258 0 3.668-.012 5.181-.072 1.513-.063 2.781-.346 3.755-1.32.974-.973 1.257-2.241 1.32-3.755.06-1.514.072-1.923.072-5.181s-.012-3.668-.072-5.181c-.063-1.514-.346-2.781-1.32-3.755-.974-.974-2.242-1.257-3.755-1.32C15.668.012 15.259 0 12 0z"/><circle cx="12" cy="12" r="3.6"/><circle cx="16.8" cy="7.2" r="1.44"/>
     </svg>
   </a>
 </nav>
+
 
       </div>
     </aside>
