--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="sidebar-fun" id="desktop-fun">
           <div class="fun-title">Fun things</div>
           <a href="#" id="theme-toggle" class="fun-link" aria-label="Change theme" style="margin-top: 8px; margin-bottom:18px;">
-            <span id="theme-toggle-text">🌙 Change theme</span>
+            <span id="theme-toggle-text">Change theme</span>
           </a>
           <div class="textContent">
             <span class="exp-desc">More coming soon...</span>
