--- a/index.html
+++ b/index.html
@@ -195,5 +195,6 @@
       setMode(!document.body.classList.contains('dark-mode'));
     }
   </script>
+<script src="theme.js"></script>
 </body>
 </html>
