site header as block

--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 <body>
   <!-- MOBILE HEADER (shown only on mobile by CSS) -->
   <div class="mobile-header" style="display:none;">
+  <div class="identity-block">
     <span class="mobile-brand" id="mobile-brand">Roie Shalom</span>
     <span class="mobile-role" id="mobile-role">Product Design Lead</span>
-    <div class="mobile-social">
-      <!-- Social SVG icons here (same as sidebar) -->
-    </div>
   </div>
+  <div class="mobile-social">
+    <!-- Social SVG icons here (same as sidebar) -->
+  </div>
+</div>
   <div class="layout">
     <aside class="sidebar">
       <div class="sidebar-inner">
-        <span class="brand" id="desktop-brand">Roie Shalom</span>
-        <span class="role" id="desktop-role">Product Design Lead</span>
+  <div class="identity-block">
+    <span class="brand" id="desktop-brand">Roie Shalom</span>
+    <span class="role" id="desktop-role">Product Design Lead</span>
+  </div>
         <p class="sidebar-bio">
           Welcome to my personal website! Here you can find my projects, past experience, and some other experiments I'm running.
         </p>
