--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
       <!-- Footer placed after all main content, at the end of main-content column -->
       <footer>
         <p style="text-align:center; margin-top:48px; margin-bottom:18px; color:var(--color-text); font-size:.98em;">
-          © 2025 Roie Shalom<br>
-          Website under development — stay tuned for updates<br>
-          Contact: roiesh🐌gmail.com | Berlin, Germany
+          Coded in VS Code with Perplexity as my counterpart.<br>
+          This is also a learning and experiment environment for me<br>
+          as I try to integrate and goof around with technologies, Let's see where it takes me.
+
         </p>
       </footer>
     </main>
