personal footer TYPO

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <p style="text-align:center; margin-top:48px; margin-bottom:18px; color:var(--color-text); font-size:.98em;">
           Coded in VS Code with Perplexity as my counterpart.<br>
           This is also a learning and experiment environment for me<br>
-          as I try to integrate and goof around with technologies, Let's see where it takes me.
+          as I try to integrate and goof around with technologies. Let's see where it takes me.
 
         </p>
       </footer>
