--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
               <p class="work-desc">Description</p>
             </div>
           </div>
+              <div class="work-item">
+            <a href="project4.html">
+              <img class="work-thumb" src="content/images/placeholder.png" alt="Project 4 thumbnail">
+            </a>
+            <div class="work-details">
+              <div class="exp-role">Project name</div>
+              <p class="work-desc">Description</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- Footer placed after all main content, at the end of main-content column -->
