--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Roie Shalom · Product Design Lead</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="content/images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
