--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           Welcome to my personal website! Here you can find my projects, past experience, and some other experiments I'm running.
         </p>
         <nav class="sidebar-nav">
-          <a href="#about" class="nav-link active">About</a>
+          <a href="#about" class="nav-link active">About me</a>
           <a href="#experience" class="nav-link">Experience</a>
           <a href="#work" class="nav-link">Projects</a>
         </nav>
@@ -60,7 +60,18 @@
         </p>
       </section>
       <section id="experience" class="section">
-        <div class="section-title">Experience</div>
+        <div class="section-title">Experience 
+          <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download>
+  Download my full CV
+</a>
+        </div>
+  </div>
+  <ul id="experience-list" class="experience-list">
+    <!-- dynamically loaded experience items -->
+  </ul>
+</section>
+
+        </div>
         <ul id="experience-list" class="experience-list">
         </ul>
       </section>
