--- a/index.html
+++ b/index.html
@@ -63,18 +63,15 @@
         <div class="section-title">Experience 
           <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download>
   Download my full CV
-          </a>
+</a>
         </div>
   </div>
   <ul id="experience-list" class="experience-list">
-    <!-- dynamically loaded experience items -->
-  </ul>
-</section>
-
         </div>
         <ul id="experience-list" class="experience-list">
         </ul>
-      </section>
+      </section>  </ul>
+</section>
       <section id="work" class="section">
         <div class="section-title">Projects</div>
         <div class="selected-work" id="projects-list"></div>
