--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <section id="experience" class="section">
           <div class="section-title">
             Experience
-            <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download class="cv-link">
-              <i class="fa-solid fa-arrow-down fa-sm" aria-hidden="true" style="margin-right:7px;"></i>
+            <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download class=".exp-company">
+              <i class="fa-solid fa-file-arrow-down" aria-hidden="true" style="margin-right:7px;"></i>
               Download my full CV
             </a>
           </div>
