--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <div class="section-title">
             Experience
             <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download class="cv-link">
-              <i class="fa-solid fa-file-arrow-down" aria-hidden="true" style="margin-right:7px;"></i>
-              Download my full CV
+              Download my full CV <i class="fa-solid fa-file-arrow-down" aria-hidden="true" style="margin-right:7px;"></i>
+              
             </a>
           </div>
           <ul id="experience-list" class="experience-list"></ul>
