footer size, ux-projects title

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         </section>
 
       <section id="work" class="section">
-        <div class="section-title">Projects</div>
+        <div class="section-title">UX Projects</div>
         <div class="selected-work" id="projects-list"></div>
       </section>
       <!-- Footer placed after all main content, at the end of main-content column -->
       <footer>
-        <p style="text-align:center; margin-top:48px; margin-bottom:18px; color:var(--color-text); font-size:.98em;">
+        <p style="text-align:center; margin-top:48px; margin-bottom:18px; color:var(--color-text); font-size:.9em;">
           Coded in VS Code with Perplexity as my counterpart.<br>
           This is also a learning and experiment environment for me<br>
           as I try to integrate and goof around with technologies. Let's see where it takes me.
