--- a/content/projects/project-template.html
+++ b/content/projects/project-template.html
@@ -12,9 +12,8 @@
 <body>
   <div class="project-container">
     <a href="/index.html" class="cv-link">
-      <i class="fa-solid fa-arrow-left" style="margin-right: 8px;"></i> Back to Portfolio
+      <i class="fa-solid fa-circle-left" style="margin-right: 8px;"></i> Home
     </a>
-    
     <div id="project-content">
       <p style="text-align: center; padding: 60px 20px;">Loading project...</p>
     </div>
