--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="section-title">
             Experience
             <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download class="cv-link">
-              Download my CV <i class="fa-solid fa-file-arrow-down" aria-hidden="true" style="margin-right:7px;"></i>
+              Download my CV <i class="fa-solid fa-circle-down" aria-hidden="true" style="margin-right:7px;"></i>
               
             </a>
           </div>
