--- a/content/projects/project-template.html
+++ b/content/projects/project-template.html
@@ -10,14 +10,15 @@
   <script src="https://kit.fontawesome.com/3ff078e01b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="project-container">
-    <a href="/index.html" class="cv-link">
-      <i class="fa-solid fa-circle-left" style="margin-right: 8px;"></i> Home
-    </a>
-    <div id="project-content">
-      <p style="text-align: center; padding: 60px 20px;">Loading project...</p>
-    </div>
+<div class="project-container">
+  <a href="/index.html" class="icon-link">
+    <i class="fa-solid fa-circle-left"></i>
+    Home
+  </a>
+  <div id="project-content">
+    <p style="text-align: center; padding: 60px 20px;">Loading project...</p>
   </div>
+</div>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
