--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
         <section id="experience" class="section">
           <div class="section-title">
             Experience
-            <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download class="cv-link">
-              Download my CV <i class="fa-solid fa-circle-down" aria-hidden="true" style="margin-right:7px;"></i>
-              
-            </a>
+         <a href="content/downloads/Roie%20Shalom-%20Product%20Design%20Lead.pdf" download class="icon-link">
+           <i class="fa-solid fa-circle-down" aria-hidden="true"></i> Download my CV </a>
+         </a>
           </div>
           <ul id="experience-list" class="experience-list"></ul>
         </section>
