--- a/content/projects/project-template.html
+++ b/content/projects/project-template.html
@@ -32,7 +32,7 @@
         </div>
       `;
     } else {
-      fetch('../data/projects.json')
+      fetch('/data/projects.json')
         .then(res => res.json())
         .then(projects => {
           const project = projects.find(p => p.id === projectId);
@@ -50,8 +50,8 @@
           document.title = project.title + ' | Roie Shalom';
           
           const images = [];
-          for (let i = 1; i <= project.imageCount; i++) {
-            images.push(`../${project.imageFolder}/f${i}.png`);
+          for (let i = 1; i <= project.imagecount; i++) {
+            images.push(`/${project.imagefolder}/${project.imageprefix}${i}.${project.imageformat}`);
           }
           
           document.getElementById('project-content').innerHTML = `
