gallery page not bento

--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
         </section>
 
       <section id="work" class="section">
-        <div class="section-title">UX Projects</div>
+        <div class="section-title">UX Projects
+          <a href="gallery.html" class="icon-link">
+            <i class="fa-solid fa-circle-down" aria-hidden="true"></i> View all projects
+          </a>
+        </div>
         <div class="selected-work" id="projects-list"></div>
       </section>
       <!-- Footer placed after all main content, at the end of main-content column -->
